--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "formik": "^2.4.5",
     "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4",
+    "x-data-grid": "^2.1.0",
     "yup": "^1.4.0"
   },
   "scripts": {
